updates new documentatation
